--- a/example2.html
+++ b/example2.html
@@ -311,7 +311,7 @@
 <div id="googleMap"></div>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6byymfkjmYzeSGOX5z_G6ywbOSoCfUtQ&callback=initMap"></script>
 <script>
 var myCenter = new google.maps.LatLng(55.755760, 37.615762);
 
