--- a/example3.html
+++ b/example3.html
@@ -455,7 +455,7 @@
 <div id="googleMap" style="height:400px;width:100%;"></div>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6byymfkjmYzeSGOX5z_G6ywbOSoCfUtQ&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 <script>
 var myCenter = new google.maps.LatLng(41.878114, -87.629798);
 
