--- a/example1.html
+++ b/example1.html
@@ -50,6 +50,11 @@
   .navbar-nav  li a:hover {
       color: #171717 !important;
   }
+  #googleMap {
+      width: 100%;
+      height: 400px;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);}
   </style>
 </head>
 <body>
@@ -107,7 +112,33 @@
     </a></div>
   </div>
 </div>
+<div id="googleMap" style="height:400px;width:100%;"></div>
 
+<!-- Add Google Maps -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6byymfkjmYzeSGOX5z_G6ywbOSoCfUtQ&callback=initMap"></script>
+<script>
+var myCenter = new google.maps.LatLng(55.755760, 37.615762);
+
+function initialize() {
+var mapProp = {
+  center:myCenter,
+  zoom:12,
+  scrollwheel:false,
+  draggable:false,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+var marker = new google.maps.Marker({
+  position:myCenter,
+  });
+
+marker.setMap(map);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p>Copyright and contacts</a></p>
