--- a/example1.html
+++ b/example1.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <style>
   body {
       font: 20px Montserrat, sans-serif;
@@ -55,6 +56,15 @@
       height: 400px;
       -webkit-filter: grayscale(100%);
       filter: grayscale(100%);}
+ .w3-padding-32 {
+    
+    padding-bottom: 24px!important;}
+.w3-xlarge {
+    font-size: 24px!important;
+}
+.w3-xlarge a {
+color:#f7f7f7;}
+
   </style>
 </head>
 <body>
@@ -141,7 +151,13 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Copyright and contacts</a></p>
+<div class="w3-xlarge w3-padding-32">
+   <a href="#" class="w3-hover-text-grey"><i class="fa fa-vk"></i></a>
+   <a href="#" class="w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
+   <a href="#" class="w3-hover-text-red"><i class="fa fa-instagram"></i></a>
+   <a href="#" class="w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
+ </div>
+  <p>Template by Alex Mikhalchenkov. Based on Bootstrap Theme made by <a href="http://www.w3schools.com">w3schools</a> - No copyright.</p>
 </footer>
 
 </body>
