--- a/example2.html
+++ b/example2.html
@@ -341,7 +341,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Template by Alex Mikhalchenkov. Based on Bootstrap Theme made by <a href="http://www.w3schools.com"></a> - No copyright.</p>
+  <p>Template by Alex Mikhalchenkov. Based on Bootstrap Theme made by <a href="http://www.w3schools.com">w3schools</a> - No copyright.</p>
 </footer>
 
 <script>
