--- a/www/index.html
+++ b/www/index.html
@@ -325,8 +325,8 @@
                   <a href="content/gallery/10.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3">
                     <img src="content/gallery/10.jpg" class="content__innerrow_img">
                   </a>
-                  <a href="content/gallery/11.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3">
-                    <img src="content/gallery/11.jpg" class="content__innerrow_img">
+                  <a href="content/gallery/11.JPG" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3">
+                    <img src="content/gallery/11.JPG" class="content__innerrow_img">
                   </a>
                   <a href="content/gallery/12.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3">
                     <img src="content/gallery/12.jpg" class="content__innerrow_img" style="max-height:126px;">
