--- a/www/index.html
+++ b/www/index.html
@@ -140,46 +140,52 @@
 <button data-toggle="collapse" data-target="#about__story">Collapsible</button>
 
 <div id="about__story" class="collapse">
-<p>Для начала я заметил, что курс начинается с 150-200 человек. Если из этих людей останется 50 крутильщиков - это будет большой процент. Это означает, что это очень технически сложная, кропотливая и аккуратная профессия.
- 
+<p style="text-align:left;">Для начала я заметил, что курс начинается с 150-200 человек. Если из этих людей останется 50 крутильщиков - это будет большой процент. Это означает, что это очень технически сложная, кропотливая и аккуратная профессия.
+ <br><br>
  На первой сессии нам дали все виды листьев для изучения:
-
-   - Капоте ( capote ) - это связующий лист для начинки сигары.
-   - Секо ( seco ) - табачные листья очень важны для вкуса и аромата сигары.
-   - Боладо ( Bolado ) - это легкие листья обеспечивающие хорошее горение.
-   - Лигеро ( Ligero ) - это это самый толстый лист медленно горящий обеспечивает крепость сигары.
-   - Капа ( Capa ) - cамый тонкий, нежный и красивый эластичный покровный лист.
-
+ <br><br>
+<ol style="list-style-type: disc;">
+   <li>- Капоте ( capote ) - это связующий лист для начинки сигары.</li>
+   <li>- Секо ( seco ) - табачные листья очень важны для вкуса и аромата сигары.</li>
+   <li>- Боладо ( Bolado ) - это легкие листья обеспечивающие хорошее горение.</li>
+   <li>- Лигеро ( Ligero ) - это это самый толстый лист медленно горящий обеспечивает крепость сигары.</li>
+   <li>- Капа ( Capa ) - cамый тонкий, нежный и красивый эластичный покровный лист.</li>
+   </ol>
+ <br><br>
   После знакомства со всеми листьями ученики должны научиться безошибочно отличать эти листья друг от друга.
-
+ <br><br>
   Далее изучаются все инструменты для создания сигар:
-   - Табла ( Tabla ) деревянная доска.
-   - Чавета ( Chaveta ) специальный нож для разделывания и резки сигарных листьев.
-   - Кастиё ( Casquillo ) маленький круглый нож для покровных листьев.
-   - Гомеро ( Gomero ) специальная ёмкость для сигарного клея.
-   - Гильотина ( Gillotina ) машинка для резки сигар.
-   - Сэпо (специальное приспособление с отверстиями для проверки диаметра сигар).
-   - Мольдэ ( Molde ) - пресс-форма для начинки сигар.
-   - Прэнса ( Prensa ) - пресс.
- 
+   <br>
+   <ol style="list-style-type: disc;">
+   	<li>- Табла ( Tabla ) деревянная доска.</li>
+   <li>- Чавета ( Chaveta ) специальный нож для разделывания и резки сигарных листьев.</li>
+   <li>- Кастиё ( Casquillo ) маленький круглый нож для покровных листьев.</li>
+  <li> - Гомеро ( Gomero ) специальная ёмкость для сигарного клея.</li>
+   <li>- Гильотина ( Gillotina ) машинка для резки сигар.</li>
+   <li>- Сэпо (специальное приспособление с отверстиями для проверки диаметра сигар).</li>
+   <li>- Мольдэ ( Molde ) - пресс-форма для начинки сигар.</li>
+   <li>- Прэнса ( Prensa ) - пресс.</li>
+   </ol>
+  <br><br>
   Все эти вещи студенты узнают и изучают за одну неделю.
- 
+  <br><br>
 2. После начинается обучение тому, как правильно сделать начинку. Учитель - мастер с большим опытом - объясняет в деталях каждому студенту весь процесс изготовления начинки сигары. Ученик должен сделать начинку для 10 сигар и оставить ее в пресс-форме, после чего приходит учитель и проверяет качество каждой. Начинка - это самое важное из всего, что делают крутильщики. Если неправильно сделать начинку - сигару курить будет невозможно. Учителя будут все время повторять это, в течении 2 месяцев. Преподаватель постоянно контролирует качество выполненной работы, и после двух месяцев ученик, если подготовлен достаточно, идет к следующему этапу.
- 
+  <br><br>
    3. Начинается обучение завершающей стадии - покрова сигары, производимой самым тонким и нежным листом. Это самый трудный процесс. Учитель контролирует выполнение всех действий, каждую изготовленную сигару, и корректирует детали. К этому времени каждый студент должен успевать выполнить минимальный стандарт - 60 сигар в день. В это же время происходит отчисление студентов. Другими словами - учитель определяет, в состоянии ли студенты верно оценивать табак и производить правильные и хорошие сигары, и принимает решение, кто из них не должен продолжать обучение.  Одним из объяснений жёсткого отбора учеников являются большие потери качественного материала, который тратится и портится впустую. Однако, вполне возможно некоторые из этих людей смогут быть переведены на другие должности в рамках сигарного завода.
- 
+  <br><br>
  4 - Через 3-4,5 месяца учителя определяют, какие студенты готовы быть связаны с производством. Каждый из них должен делать как минимум 54 хорошие, качественные сигары в день. Учителя и технический персонал завода пристально изучают изготовленные учеником сигары, и максимум 3 из них могут быть отвергнуты, как некачественные. Если отвергаются более 5 - ученик отклоняется от производства.
    Каждый месяц крутильщик должен увеличивать производство сигар на 20-30 штук. Продолжается отсеивание учеников.
- 
+  <br><br>
    5 - Когда ученик может делать каждый день от 81 до 90 сигар, то он переходит на следующий этап.
- 
-  6 этап - Более 105 сигар в день.
- 
-  7 этап - 120 сигар.
-  8 этап - последний этап в обучении. Ученики должны делать 135 или более сигар в день. Если эта практика регулярно встречается в течение месяца - с одобрения учителя ученик проходит заключительный экзамен. В течение одной недели все изготовленные им сигары рассматриваются комиссией технического качества, которая определяет ваши способности и умения и ставит оценку. Максимальная оценка - 100 пунктов.
-
+  <br><br>
+  6 - Более 105 сигар в день.
+  <br><br>
+  7 - 120 сигар.
+   <br><br>
+  8 - последний этап в обучении. Ученики должны делать 135 или более сигар в день. Если эта практика регулярно встречается в течение месяца - с одобрения учителя ученик проходит заключительный экзамен. В течение одной недели все изготовленные им сигары рассматриваются комиссией технического качества, которая определяет ваши способности и умения и ставит оценку. Максимальная оценка - 100 пунктов.
+ <br><br>
 Крутильщики должны быть обучены и оценены в течении 9-ти месяцев или ранее, по завершении обучения  им присваивается 7-я категория мастерства. Я получил своею оценку через 6,5 месяцев и получил 99 баллов. 
-
+ <br><br>
 Затем я начал совершенствовать свою работу, делать сигары более толстых и длинных форматов, увеличивая постепенно производство, и перешел на 8-ю категорию. Необходимо было продолжать работать и стремиться достичь высшей, 9-й категории. 
 После долгой выработки и производства сигар разных форматов, таких как фигурные ( пирамидес ) и двойные фигурные ( саламонес ) и увеличения производства мне присвоили 9-ю категорию.
 </p>
