--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
 Я пошел на курсы кручения сигар после окончания колледжа, это было в сентябре 1994 года. 
 Сейчас я расскажу свою историю в качестве студента. </p>
 
-<button data-toggle="collapse" data-target="#about__story">Collapsible</button>
+<button data-toggle="collapse" data-target="#about__story">Показать</button>
 
 <div id="about__story" class="collapse">
 <p style="text-align:left;">Для начала я заметил, что курс начинается с 150-200 человек. Если из этих людей останется 50 крутильщиков - это будет большой процент. Это означает, что это очень технически сложная, кропотливая и аккуратная профессия.
