--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ekko-lightbox.min.css" rel="stylesheet">
     <link href="css/tabakero.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -352,6 +352,9 @@
                 <p><span class="glyphicon glyphicon-map-marker"></span> Россия, Москва</p>
                 <p><span class="glyphicon glyphicon-phone"></span> +7 (926) 467-9446</p>
                 <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p> 
+                <p style="font-size: 30px;">
+                <a href=""><span class="fa fa-vk"></span></a> <a href=""><span class="fa fa-facebook-official"></span></a> <a href=""><span class="fa fa-instagram"></span></a> <a href=""><span class="fa fa-pinterest-p"></span></a> <a href=""><span class="fa fa-twitter"></span></a>
+                </p>
               </div>
               <div class="col-sm-7">
                 <form method="POST" action="http://formspree.io/dervergessen@mail.ru">
