--- a/www/index.html
+++ b/www/index.html
@@ -353,7 +353,7 @@
                 <p><span class="glyphicon glyphicon-phone"></span> +7 (926) 467-9446</p>
                 <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p> 
                 <p style="font-size: 30px;">
-                <a href=""><span class="fa fa-vk"></span></a> <a href=""><span class="fa fa-facebook-official"></span></a> <a href=""><span class="fa fa-instagram"></span></a> <a href=""><span class="fa fa-pinterest-p"></span></a> <a href=""><span class="fa fa-twitter"></span></a>
+                <a href="http://vk.com/id33865758"><span class="fa fa-vk"></span></a> <a href="https://www.facebook.com/tabakero.su"><span class="fa fa-facebook-official"></span></a> <a href="https://www.instagram.com/erliscambara/"><span class="fa fa-instagram"></span></a> <a href="https://es.pinterest.com/erliscambara/"><span class="fa fa-pinterest-p"></span></a> <a href="https://twitter.com/ErlisCambara"><span class="fa fa-twitter"></span></a> <a href="https://plus.google.com/u/0/112052573571818621072/posts"><span class="fa fa-google-plus-official"></span></a> <a href="http://www.youtube.com/watch?v=GwwFxjmaDIg"><span class="fa fa-youtube"></span></a>
                 </p>
               </div>
               <div class="col-sm-7">
