--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ekko-lightbox.min.css" rel="stylesheet">
     <link href="css/tabakero.css" rel="stylesheet">
+    
 	<link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,7 +36,7 @@
         </div>
         <div class="topframe__header_contacts hidden-xs">
           <p><span class="glyphicon glyphicon-phone"></span> +7 (926) 467-9446<br>
-          <span class="glyphicon glyphicon-envelope"></span> email@something.com</p>
+          <span class="glyphicon glyphicon-envelope"></span> listab@mail.ru</p>
         </div>
       </div>
       <div class="topframe__menu">
@@ -351,7 +352,7 @@
                 <p>Желаете попробовать сигары или увидеть сигарное шоу? Свяжитесь со мной: </p>
                 <p><span class="glyphicon glyphicon-map-marker"></span> Россия, Москва</p>
                 <p><span class="glyphicon glyphicon-phone"></span> +7 (926) 467-9446</p>
-                <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p> 
+                <p><span class="glyphicon glyphicon-envelope"></span> listab@mail.ru</p> 
                 <p style="font-size: 30px;">
                 <a href="http://vk.com/id33865758"><span class="fa fa-vk"></span></a> <a href="https://www.facebook.com/tabakero.su"><span class="fa fa-facebook-official"></span></a> <a href="https://www.instagram.com/erliscambara/"><span class="fa fa-instagram"></span></a> <a href="https://es.pinterest.com/erliscambara/"><span class="fa fa-pinterest-p"></span></a> <a href="https://twitter.com/ErlisCambara"><span class="fa fa-twitter"></span></a> <a href="https://plus.google.com/u/0/112052573571818621072/posts"><span class="fa fa-google-plus-official"></span></a> <a href="http://www.youtube.com/watch?v=GwwFxjmaDIg"><span class="fa fa-youtube"></span></a>
                 </p>
