--- a/www/index-4.html
+++ b/www/index-4.html
@@ -408,6 +408,102 @@
         </div>
         <div class="botframe__content__counters col-sm-4"></div>
       </div>
+      <div class="botframe__content_position">
+        <div class="counters">
+          <div class="counter">
+            <table cellpadding="0" cellspacing="0" border="0" width="88" height="31" style="line-height:0;width:88px;"><tr style="height:10px;">
+<td style="padding:0;width:38px;height:10px;"><a href="http://www.24log.de" target="_blank"><img src="http://counter.24log.ru/buttons/24/bg24-1_1.gif" width="38" height="10" border="0" alt="Besucherzahler" title="Besucherzahler " style="margin:0;padding:0;" /></a></td>
+<td style="padding:0;width:50px;height:10px;"><a href="http://www.24log.ru" target="_blank"><img src="http://counter.24log.ru/buttons/24/bg24-1_3.gif" width="50" height="10" border="0" alt="" style="margin:0;padding:0;"></a></td></tr>
+<tr style="height:21px;"><td style="padding:0;width:38px;height:21px"><a href="http://www.24log.ru" target="_blank"><img src="http://counter.24log.ru/buttons/24/bg24-1_2.gif" width="38" height="21" alt="счетчик посещений" title="счетчик посещений" border="0" style="margin:0;padding:0;" /></a></td>
+<script type='text/javascript' language='javascript'>
+document.write('<td style="padding:0px;width:50px;height:21px;"><a href="http://www.24log.ru/rating/rating.php?c=12" target="_blank"><img border="0" width="50" height="21" src="http://counter.24log.ru/counter?id=248870&t=24&st=1&r='+escape(document.referrer)+'&u='+escape(document.URL)+'&s='+((typeof(screen)=='undefined')?'':screen.width+'x'+screen.height+'x'+(screen.colorDepth?screen.colorDepth:screen.pixelDepth))+'&rnd='+Math.random()+'" alt="Рейтинг: Развлечения" title="Показано число просмотров всего и за сегодня" style="margin:0;padding:0;" /></a></td>');
+</script></tr></table><NOSCRIPT><a href="http://www.24log.ru"></a></NOSCRIPT></div>
+
+<!-- HotLog -->
+<div class="counter">
+<span id="hotlog_counter"></span>
+<span id="hotlog_dyn"></span>
+<script type="text/javascript"> var hot_s = document.createElement('script');
+hot_s.type = 'text/javascript'; hot_s.async = true;
+hot_s.src = 'http://js.hotlog.ru/dcounter/2499618.js';
+hot_d = document.getElementById('hotlog_dyn');
+hot_d.appendChild(hot_s);
+</script>
+<noscript>
+<a href="http://click.hotlog.ru/?2499618" target="_blank">
+<img src="http://hit34.hotlog.ru/cgi-bin/hotlog/count?s=2499618&im=357" border="0" 
+title="HotLog" alt="HotLog"></a>
+</noscript>
+<!-- /HotLog --></div>
+
+<div class="counter"><!-- tic-pr.com --><a href="http://www.tic-pr.com/" target="_blank"><img src="http://www.tic-pr.com/e/tabakero.com_9_229.0.0.gif" border="0" alt="Анализ сайта" /></a><!-- tic-pr.com --></div>
+
+ <div class="counter"><!-- Rating@Mail.ru logo -->
+<a href="http://top.mail.ru/jump?from=2670716">
+<img src="//top-fwz1.mail.ru/counter?id=2670716;t=479;l=1" 
+style="border:0;" height="31" width="88" alt="Рейтинг@Mail.ru" /></a>
+<!-- //Rating@Mail.ru logo --></div>
+
+
+<div class="counter"><!-- Yandex.Metrika informer --><a href="https://metrika.yandex.ru/stat/?id=31337323&amp;from=informer"target="_blank" rel="nofollow"><img src="https://mc.yandex.ru/informer/31337323/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:31337323,lang:'ru'});return false}catch(e){}" /></a><!-- /Yandex.Metrika informer --> <!-- Yandex.Metrika counter --><script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter31337323 = new Ya.Metrika({ id:31337323, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="https://mc.yandex.ru/watch/31337323" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter --></div>
+<div class="counter">
+<div id='Rambler-counter'>
+<noscript>
+<a href="http://top100.rambler.ru/navi/3125504/">
+  <img src="http://counter.rambler.ru/top100.cnt?3125504" alt="Rambler's Top100" border="0" />
+</a>
+</noscript>
+</div>
+<!-- Код скрипта должен быть размещен строго ниже контейнера для логотипа (div c id='Rambler-counter') -->
+<script type="text/javascript">
+var _top100q = _top100q || [];
+_top100q.push(['setAccount', '3125504']);
+_top100q.push(['trackPageviewByLogo', document.getElementById('Rambler-counter')]);
+
+(function(){
+  var pa = document.createElement("script"); 
+  pa.type = "text/javascript"; 
+  pa.async = true;
+  pa.src = ("https:" == document.location.protocol ? "https:" : "http:") + "//st.top100.ru/top100/top100.js";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(pa, s);
+})();
+</script>
+</div>
+
+
+<script type="text/javascript">
+      window.___gcfg = {
+        lang: 'ru'
+      };
+
+      (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
+</script>
+
+<div class="counter">
+<!-- //Rating@Mail.ru counter --> <!--LiveInternet counter--><script type="text/javascript">new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"" : ";s"+screen.width+"*"+screen.height+"*" + (screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u"+escape(document.URL) +  ";" +Math.random();</script><!--/LiveInternet-->
+</div>
+
+<script type="text/javascript">
+var _tmr = _tmr || [];
+_tmr.push({id: "2670716", type: "pageView", start: (new Date()).getTime()});
+(function (d, w, id) {
+  if (d.getElementById(id)) return;
+  var ts = d.createElement("script"); ts.type = "text/javascript"; ts.async = true; ts.id = id;
+  ts.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//top-fwz1.mail.ru/js/code.js";
+  var f = function () {var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ts, s);};
+  if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); }
+})(document, window, "topmailru-code");
+</script><noscript><div style="position:absolute;left:-10000px;">
+<img src="//top-fwz1.mail.ru/counter?id=2670716;js=na" style="border:0;" height="1" width="1" alt="Рейтинг@Mail.ru" />
+</div></noscript>
+        </div>
+
+      </div>
     </div>
 
     <!-- Carousel #2 initialization -->
