--- a/rinser/www/index.html
+++ b/rinser/www/index.html
@@ -28,11 +28,16 @@
     <script src="js/ekko-lightbox.min.js"></script>
 
     <div class="topframe" id="top">
+      <div class="topframe__shield"></div>
+      <div class="topframe__gap">
+      </div>
       <div class="topframe__menu">
-        <nav class="navbar navbar-default data-spy="affix" data-offset-top="100"">
+        <nav class="navbar navbar-default" data-spy="affix" data-offset-top="100">
           <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#top"></a>
+              <a class="navbar-brand" href="#top">
+                RINSER-AUTO
+              </a>
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -788,7 +793,15 @@
         </div>
         <div class="botframe__content__counters col-sm-4"></div>
       </div>
-      <div class="botframe__content_position">
+      
+        <div class="botframe__content__block clearfix">
+        <div class="botframe__content_position-text">
+          <a class="botframe__content_brand" href="#top">
+                RINSER-AUTO
+              </a>
+              <p class="botframe__content_contacts"><span class="glyphicon glyphicon-phone"></span> +7 (495) 123-4567<br>
+              <span class="glyphicon glyphicon-envelope"></span> email@email.com</p> 
+        </div>
       </div>
     </div>
 
