--- a/rinser/www/index.html
+++ b/rinser/www/index.html
@@ -35,9 +35,9 @@
         <nav class="navbar navbar-default" data-spy="affix" data-offset-top="100">
           <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#top">
+              <!--<a class="navbar-brand" href="#top">
                 RINSER-AUTO
-              </a>
+              </a>-->
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
