--- a/eden_tsc/www/index_ru.html
+++ b/eden_tsc/www/index_ru.html
@@ -24,7 +24,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="css/eden.css" rel="stylesheet">
+    <link href="css/eden_ferrari.css" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid" id="main_frame">
@@ -44,11 +44,12 @@
                     <div class="col-md-3 col-md-push-5 col-lg-5 col-lg-push-5 col-sm-5 col-sm-push-4 col-xs-6" id="brand"><h2>EDEN</h2><h4>Travel Service Company</h4></div>-->
             </div>
             <div class="row" id="main_menu_row">
-                <ul class="col-sm-8 col-sm-push-2 col-md-4 col-md-push-4 nav navbar-nav" id="main_menu">
-                    <li class="col-xs-3 col-sm-3 but item1 active"><a href="#">Компания</a></li>
-                    <li class="col-xs-3 col-sm-3 but item2"><a href="#">Сервис</a></li>
-                    <li class="col-xs-3 col-sm-3 but item3"><a href="#">Партнеры</a></li>
-                    <li class="col-xs-3 col-sm-3 but item4"><a href="#">Контакты</a></li>
+                <ul class="col-sm-8 col-sm-push-2 col-md-5 col-md-push-4 nav navbar-nav" id="main_menu">
+                    <li class="col-xs-2 col-sm-2 but item1 active"><a href="#">Компания</a></li>
+                    <li class="col-xs-2 col-sm-2 but item2"><a href="#">Сервис</a></li>
+                    <li class="col-xs-2 col-sm-2 but item3"><a href="#">Туры</a></li>
+                    <li class="col-xs-2 col-sm-2 but item4"><a href="#">Партнеры</a></li>
+                    <li class="col-xs-2 col-sm-2 but item5"><a href="#">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -77,6 +78,16 @@
                                 </div>
                         </div>
                     </div>
+                    <!-- Slide FERRARI -->
+                    <div class="item" id="main4" style="background-color: #580000">
+                        <div class="container-fluid" style="height:100%;">
+                            
+                                <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-6 col-md-4 col-md-push-7" id="p5_back">
+                                    <P>Сотрудники компании EDEN Travel Service Company имеют квалификацию, позволяющую организовать индивидуальное путешествие любого уровня сложности, срочности и детализации. Деятельность компании охватывает весь спектр туристических услуг. Информация по услугам предоставляется по запросу.    Благодаря прочным деловым контактам и высоким стандартам взаимодействия, клиенты чувствуют особое отношение со стороны наших деловых партнеров в разных уголках планеты.     </P>
+                                </div>
+                        </div>
+                    </div>
+
                     <!-- Slide #3 -->
                     <div class="item" id="main2" style="background-color: #0c0d10">
                         <div class="container-fluid" style="height:100%;">
@@ -233,12 +244,20 @@
             });
             $(".item3").click(function(){
                 $("#myCarousel").carousel(2);
+                document.getElementById("top_frame").style.backgroundColor=document.getElementById("main4").style.backgroundColor;
+                document.getElementById('bottom_frame').style.backgroundColor=document.getElementById("main4").style.backgroundColor;
+                document.getElementById('blackstripe_row').style.backgroundColor=document.getElementById("main4").style.backgroundColor;
+                
+            });
+
+            $(".item4").click(function(){
+                $("#myCarousel").carousel(3);
                 document.getElementById("top_frame").style.backgroundColor=document.getElementById("main2").style.backgroundColor;
                 document.getElementById('bottom_frame').style.backgroundColor=document.getElementById("main2").style.backgroundColor;
             document.getElementById('blackstripe_row').style.backgroundColor=document.getElementById("main2").style.backgroundColor;
                 });
-            $(".item4").click(function(){
-                $("#myCarousel").carousel(3);
+            $(".item5").click(function(){
+                $("#myCarousel").carousel(4);
                 document.getElementById("top_frame").style.backgroundColor=document.getElementById("main3").style.backgroundColor;
                 document.getElementById('bottom_frame').style.backgroundColor=document.getElementById("main3").style.backgroundColor;
             document.getElementById('blackstripe_row').style.backgroundColor=document.getElementById("main3").style.backgroundColor;
