ferrari update index_ru 1.2

--- a/eden_tsc/www/index_ru.html
+++ b/eden_tsc/www/index_ru.html
@@ -44,12 +44,12 @@
                     <div class="col-md-3 col-md-push-5 col-lg-5 col-lg-push-5 col-sm-5 col-sm-push-4 col-xs-6" id="brand"><h2>EDEN</h2><h4>Travel Service Company</h4></div>-->
             </div>
             <div class="row" id="main_menu_row">
-                <ul class="col-sm-8 col-sm-push-2 col-md-5 col-md-push-4 nav navbar-nav" id="main_menu">
-                    <li class="col-xs-2 col-sm-2 but item1 active"><a href="#">Компания</a></li>
-                    <li class="col-xs-2 col-sm-2 but item2"><a href="#">Сервис</a></li>
-                    <li class="col-xs-2 col-sm-2 but item3"><a href="#">Туры</a></li>
-                    <li class="col-xs-2 col-sm-2 but item4"><a href="#">Партнеры</a></li>
-                    <li class="col-xs-2 col-sm-2 but item5"><a href="#">Контакты</a></li>
+                <ul class="col-sm-6 col-sm-push-3 col-md-4 col-md-push-4 nav navbar-nav" id="main_menu">
+                    <li class="but item1 active"><a href="#">Компания</a></li>
+                    <li class="but item2"><a href="#">Сервис</a></li>
+                    <li class="but item3"><a href="#">Туры</a></li>
+                    <li class="but item4"><a href="#">Партнеры</a></li>
+                    <li class="but item5"><a href="#">Контакты</a></li>
                 </ul>
             </div>
         </div>
