--- a/eden_tsc/www/index_ru.html
+++ b/eden_tsc/www/index_ru.html
@@ -34,7 +34,8 @@
                     <div class="absolute dropdown">
                         <button class="language" data-toggle="dropdown"><span class="glyphicon glyphicon-globe"></span> Language <span class="caret"></span></button>
                         <ul class="dropdown-menu" id="language_menu">
-                            <li><a href="./index.html">English</a></li>
+                            <li><a href="./index.html">ქართული</a></li> 
+                            <li><a href="./index_en.html">English</a></li>
                             <li><a href="./index_ru.html">Русский</a></li>
                         </ul>
                     </div>
@@ -83,7 +84,30 @@
                         <div class="container-fluid" style="height:100%;">
                             
                                 <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-6 col-md-4 col-md-push-7" id="p5_back">
-                                    <P>Сотрудники компании EDEN Travel Service Company имеют квалификацию, позволяющую организовать индивидуальное путешествие любого уровня сложности, срочности и детализации. Деятельность компании охватывает весь спектр туристических услуг. Информация по услугам предоставляется по запросу.    Благодаря прочным деловым контактам и высоким стандартам взаимодействия, клиенты чувствуют особое отношение со стороны наших деловых партнеров в разных уголках планеты.     </P>
+                                    <P>Хотите ли Вы посетить знаменитые исторические и культурные центры, малоизвестные очаровательные итальянские городки или заказать любые другие услуги, достаточно сделать запрос и мы подготовим для Вас индивидуальную программу.</P>
+<p>Мы предлагаем новую концепцию путешествий, прекрасное сочетание роскоши и Гран Туризма.
+Это уникальные путешествия, разработанные специально для Вас и дарящие неповторимое очарование Итальянского Стиля Жизни. 
+Каждое путешествие – это тонкое соединение искусства, архитектуры, моды, вкуснейшей кухни и удивительной по красоте природы.</p>
+ 
+<p>Став частью настоящей команды Ferrari, у Вас будет возможность протестировать самые последние модели Ferrari и, набрав скорость, испытать навыки вождения на извилистых дорогах.
+Некоторые участки пути проходят по тому же маршруту, где когда-то  проводилась легендарная гонка Mille Miglia.</p>
+ 
+<p>Команда профессионалов, сопровождающая тур, позаботится о Вашей Ferrari, а Вы этого даже и не заметите. Утром у входа в отель Вас будет ожидать вымытый заправленный и отрегулированный автомобиль, готовый к продолжению захватывающего путешествия.</p>
+ 
+<p>Разработаны маршруты продолжительностью от 1 до 8 дней, начинающиеся из Рима, Флоренции, Милана, а также частный борт может доставить Вас из Парижа, Лондона, Франкфурта или Москвы.</p>
+ 
+<p>Туры организуются со следующими моделями автомобилей, в зависимости от наличия:</p>
+<ol>
+<li> Ferrari 488 Spider (по заявке)</li>
+<li>Ferrari 458 Spider</li>
+<li>Ferrari California T</li>
+</ol> 
+<p>Туры проводятся в сотрудничестве с Red Travel. Программа может изменяться и дополняться в соответствии с Вашими пожеланиями по предварительной договоренности. По заявке: гольф, прогулка на яхте, полеты на воздушном шаре, шоппинг, кулинарные уроки, дегустация вин, индивидуальные экскурсии. </p>
+
+<p>С основными программами и стоимостью можно ознакомиться по <a href="./content/RedTravel_PriceList_2017_Ferrari_tours.pdf">ссылке</a>.</p>
+
+<p>Подробные условия предоставляются по запросу.</P>
+<br><br>
                                 </div>
                         </div>
                     </div>
