ferrari update - more of lean development

--- a/eden_tsc/www/index.html
+++ b/eden_tsc/www/index.html
@@ -66,8 +66,8 @@
                     <div class="item active" id="main0" style="background-color: #182948">
                         <div class="container-fluid" style="height:100%;">
                                 <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p1_back">
-                                    <P>როდესაც ვამბობთ, რომ ჩვენი ყოველი დღე მოგზაურობაზე ფიქრია  ,ნამდვილად არ ვაჭარბებთ. ყოველ დილას გაღვიძებისთანავე ვფიქრობთ, თუ როგორ ატარებენ დროს ჩვენი მომხმარებლები მსოლიოს სხვა და სხვა კუთხეში.</P>
-                                    <p>
+                                    <P>როდესაც ვამბობთ, რომ ჩვენი ყოველი დღე მოგზაურობაზე ფიქრია  ,ნამდვილად არ ვაჭარბებთ. ყოველ დილას გაღვიძებისთანავე ვფიქრობთ, თუ როგორ ატარებენ დროს ჩვენი მომხმარებლები მსოლიოს სხვა და სხვა კუთხეში.
+                                    <br>
 ჩვენი მიზანია, თქვენი მოგზაურობა გავხადოთ დაუვიწყარი. სწორედ ამიტომ, თითოეულ დეტალას ვგეგმავთ და ვითვალისწინებთ ნებისმიერ თქვენს სურვილს. ადგილებს, რომელსაც თქვენ მოგზაურობისას ეწვევით, წინასწარ ვამოწმებთ,რათა თავიდან ავირიდოთ ნებისმიერი უსიამოვნება
                                     </P>
                                 </div>
@@ -78,10 +78,10 @@
                         <div class="container-fluid" style="height:100%;">
                             
                                 <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p2_back">
-                                    <P>EDEN TRAVELS TSC - დაარსებულია იმ ადმიანების მიერ, რომლებიც უკვე 15 წელიწადზე მეტია გთავაზობენ პირველი-კლასის მოგზაურობის დაგეგმვას ყველა თქვენი მოთხოვნის გათვალისწინებით. ჩვენ გთავაზობთ გამოცდილებას და პროფესიონალიზმს.</P>
-                                    <p>
-ჩვენს თითოეულ თანამშრომელს აქვს საკმარისი გამოცდილება რათა დაგეგმონ ნებისმიერი სირთულის მოგზაურობა, მაქსიმალურად მოგაწოდონ  დეტალები და გაითვალისწინონ ნებისმიერი თქვენი მოთხოვნა.</P>
-<p>
+                                    <P>EDEN TRAVELS TSC - დაარსებულია იმ ადმიანების მიერ, რომლებიც უკვე 15 წელიწადზე მეტია გთავაზობენ პირველი-კლასის მოგზაურობის დაგეგმვას ყველა თქვენი მოთხოვნის გათვალისწინებით. ჩვენ გთავაზობთ გამოცდილებას და პროფესიონალიზმს.
+                                    <br>
+ჩვენს თითოეულ თანამშრომელს აქვს საკმარისი გამოცდილება რათა დაგეგმონ ნებისმიერი სირთულის მოგზაურობა, მაქსიმალურად მოგაწოდონ  დეტალები და გაითვალისწინონ ნებისმიერი თქვენი მოთხოვნა.
+<br>
 ჩვენი მომსახურებ მოიცავს ტურისტული სერვისი სრულ სპექტრს. ნებისმიერი ინფორმაცია ხელმისაწვდომია თქვენი   მოთხოვნის შემთხვევაში.</P>
                                 </div>
                         </div>
