--- a/eden_tsc/www/index_ru.html
+++ b/eden_tsc/www/index_ru.html
@@ -64,7 +64,7 @@
                     <!-- Slide #1 -->
                     <div class="item active" id="main0" style="background-color: #182948">
                         <div class="container-fluid" style="height:100%;">
-                                <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p1_back">
+                                <div class="col-xs-12 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p1_back">
                                     <P>Не будет преувеличением сказать, что путешествиям посвящен каждый наш день. Мы просыпаемся каждое утро с мыслями о том, в каких странах сегодня отдыхают наши клиенты. Придя на работу, мы трудимся над тем, чтобы ваши желания были осуществлены с максимальной точностью, аккуратностью и тактом. Компания EDEN Travel Service Company основана людьми с пятнадцатилетним стажем предоставления первоклассного индивидуального сервиса организации путешествий, и мы предлагаем воспользоваться нашими идеями и опытом. Вам гарантированы индивидуальный подход и ответственность за все оказываемые услуги.
                                     </P>
                                 </div>
@@ -74,7 +74,7 @@
                     <div class="item" id="main1" style="background-color: #614350">
                         <div class="container-fluid" style="height:100%;">
                             
-                                <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p2_back">
+                                <div class="col-xs-12 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p2_back">
                                     <P>Сотрудники компании EDEN Travel Service Company имеют квалификацию, позволяющую организовать индивидуальное путешествие любого уровня сложности, срочности и детализации. Деятельность компании охватывает весь спектр туристических услуг. Информация по услугам предоставляется по запросу.	Благодаря прочным деловым контактам и высоким стандартам взаимодействия, клиенты чувствуют особое отношение со стороны наших деловых партнеров в разных уголках планеты.	 </P>
                                 </div>
                         </div>
