--- a/eden_tsc/www/index_en.html
+++ b/eden_tsc/www/index_en.html
@@ -63,7 +63,7 @@
                     <!-- Slide #1 -->
                     <div class="item active" id="main0" style="background-color: #182948">
                         <div class="container-fluid" style="height:100%;">
-                                <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p1_back">
+                                <div class="col-xs-12 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p1_back">
                                     <P>It would not be an exaggeration to say that every our day is wholeheartedly devoted to travelling. Every morning we wake up, thinking about our clients, enjoying their vacations all around the world at this very moment. 
                                     Coming to our office, we put all effort to fulfilling your wishes and requests with maximum accuracy and - always - tact. To foresee every possible nuisance of  your future journey we test all our routes and accommodations ourselves, and on a regular basis. 
                                     EDEN Travel Service Company was established by people with already more than fifteen years of experience in providing first-class individual journey services behind their backs. Now, we offer you our experience and devotion. You are guaranteed with an individual approach and full responsibility from our side for all our service. 
@@ -75,7 +75,7 @@
                     <div class="item" id="main1" style="background-color: #614350">
                         <div class="container-fluid" style="height:100%;">
                             
-                                <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p2_back">
+                                <div class="col-xs-12 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p2_back">
                                     <P>All our employees have proper qualifications to put together an individual journey of any complexity, urgency and specification. Our opportunities grasp the whole spectrum of tourism services. All information is available by request.
                                     Thanks to our fundamentally established business contacts, all over the world our clients experience special attention from our partners and enjoy the best care.	 </P>
                                 </div>
