--- a/eden_tsc/www/index_ru.html
+++ b/eden_tsc/www/index_ru.html
@@ -184,14 +184,13 @@
                         <div class="container-fluid" style="height:100%;">
                                 <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p4_back">
                                     <br>
-                                    <h3>Tbilisi, Georgia</h3>
-                                    <p><span class="glyphicon glyphicon-map-marker"></span> Khorava str.,3<br>
-                                     <span class="fa fa-university"></span>  VERE LOFT<br><br>
+                                    <h3>Тбилиси, Грузия</h3>
+                                    <p><span class="glyphicon glyphicon-map-marker"></span> Кипшидзе 3 Б<br><br>
                                     <span class="glyphicon glyphicon-phone-alt"></span> +995-599-853-155</p>
                                     <br>                              
-                                    <h3>Moscow, Russia </h3>
-                                    <p><span class="glyphicon glyphicon-map-marker"></span> Bryanskaya St., 5<br>
-                                    <span class="fa fa-university"></span> Europe Building business centre<br><br>
+                                    <h3>Москва, Россия</h3>
+                                    <p><span class="glyphicon glyphicon-map-marker"></span> ул. Брянская, 5<br>
+                                    <span class="fa fa-university"></span> Бизнес-центр Европа Билдинг<br><br>
                                     <span class="glyphicon glyphicon-phone-alt"></span> +7-985-77-33-255</p>
                                     <br>
                                                                  
