--- a/eden_tsc/www/index_en.html
+++ b/eden_tsc/www/index_en.html
@@ -154,8 +154,7 @@
                                 <div class="col-xs-10 col-xs-push-1 col-sm-5 col-sm-push-1 col-md-4 col-md-push-2" id="p4_back">
                                     <br>
                                     <h3>Tbilisi, Georgia</h3>
-                                    <p><span class="glyphicon glyphicon-map-marker"></span> Khorava str.,3<br>
-                                     <span class="fa fa-university"></span>  VERE LOFT<br><br>
+                                    <p><span class="glyphicon glyphicon-map-marker"></span> Kipshidze 3 B<br><br>
                                     <span class="glyphicon glyphicon-phone-alt"></span> +995-599-853-155</p>
                                     <br>                              
                                     <h3>Moscow, Russia </h3>
