--- a/izm_bani/www/gallery.html
+++ b/izm_bani/www/gallery.html
@@ -54,40 +54,40 @@
     <div class="content_position gallery__block clearfix">
     <h1>Галерея</h1>
       <div class="actions__block_item1 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0001.jpg">
+        <a href="./content/galleries/pages/gallery/0001.jpg"><img src="./content/galleries/pages/gallery/0001.jpg"></a>
       </div>
       <div class="actions__block_item2 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0002.jpg">
+        <a href="./content/galleries/pages/gallery/0002.jpg"><img src="./content/galleries/pages/gallery/0002.jpg"></a>
       </div>
       <div class="actions__block_item3 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0003.jpg">
+        <a href="./content/galleries/pages/gallery/0003.jpg"><img src="./content/galleries/pages/gallery/0003.jpg"></a>
       </div>
       <div class="actions__block_item4 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0004.jpg">
+        <a href="./content/galleries/pages/gallery/0004.jpg"><img src="./content/galleries/pages/gallery/0004.jpg"></a>
       </div>
       <div class="actions__block_item1 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0005.jpg">
+        <a href="./content/galleries/pages/gallery/0005.jpg"><img src="./content/galleries/pages/gallery/0005.jpg"></a>
       </div>
       <div class="actions__block_item2 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0006.jpg">
+        <a href="./content/galleries/pages/gallery/0006.jpg"><img src="./content/galleries/pages/gallery/0006.jpg"></a>
       </div>
       <div class="actions__block_item3 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0007.jpg">
+        <a href="./content/galleries/pages/gallery/0007.jpg"><img src="./content/galleries/pages/gallery/0007.jpg"></a>
       </div>
       <div class="actions__block_item4 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0008.jpg">
+        <a href="./content/galleries/pages/gallery/0008.jpg"><img src="./content/galleries/pages/gallery/0008.jpg"></a>
       </div>
       <div class="actions__block_item1 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0009.jpg">
+        <a href="./content/galleries/pages/gallery/0009.jpg"><img src="./content/galleries/pages/gallery/0009.jpg"></a>
       </div>
       <div class="actions__block_item2 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0010.jpg">
+        <a href="./content/galleries/pages/gallery/0010.jpg"><img src="./content/galleries/pages/gallery/0010.jpg"></a>
       </div>
       <div class="actions__block_item3 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0011.jpg">
+        <a href="./content/galleries/pages/gallery/0011.jpg"><img src="./content/galleries/pages/gallery/0011.jpg"></a>
       </div>
       <div class="actions__block_item4 col-sm-3">
-        <img src="./content/galleries/pages/gallery/0012.jpg">
+        <a href="./content/galleries/pages/gallery/0012.jpg"><img src="./content/galleries/pages/gallery/0012.jpg"></a>
       </div>
       </div>
   </div>	
