--- a/izm_bani/www/food.html
+++ b/izm_bani/www/food.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -141,10 +140,10 @@
 
 
 
-  <div class="block__footer">
+    <div class="block__footer">
       <div class="footer__info clearfix">
         <div class="footer__info_text">
-          <h1>Измайловские бани</h1>
+          <h1>ООО "Измайловские бани"</h1>
           <p>Адрес: г. Москва, ул. 6-я Парковая, д. 21</p>   
         </div>
         <div class="footer__info_phone">
