--- a/izm_bani/www/salon.html
+++ b/izm_bani/www/salon.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -172,7 +170,7 @@
   <div class="block__footer">
       <div class="footer__info clearfix">
         <div class="footer__info_text">
-          <h1>Измайловские бани</h1>
+          <h1>ООО "Измайловские бани"</h1>
           <p>Адрес: г. Москва, ул. 6-я Парковая, д. 21</p>   
         </div>
         <div class="footer__info_phone">
@@ -183,7 +181,6 @@
         <a href="http://vk.com/"><span class="fa fa-vk"></span></a> <a href="https://www.facebook.com/"><span class="fa fa-facebook-official"></span></a> <a href="https://www.instagram.com/"><span class="fa fa-instagram"></span></a>
       </div>
   </div>
-
 
 
 
