--- a/izm_bani/www/sauna.html
+++ b/izm_bani/www/sauna.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -171,7 +170,7 @@
   <div class="block__footer">
       <div class="footer__info clearfix">
         <div class="footer__info_text">
-          <h1>Измайловские бани</h1>
+          <h1>ООО "Измайловские бани"</h1>
           <p>Адрес: г. Москва, ул. 6-я Парковая, д. 21</p>   
         </div>
         <div class="footer__info_phone">
