--- a/izm_bani/www/contacts.html
+++ b/izm_bani/www/contacts.html
@@ -87,7 +87,7 @@
 <span class="glyphicon glyphicon-map-marker"></span><strong> Москва 6-я Парковая улица, дом 21</strong><br><br><br>
 <strong>Ближайшее метро:</strong> Первомайская, Щелковская, Измайловская, Черкизовская<br><br><br>
                 
-              <span class="glyphicon glyphicon-phone"></span><strong>+7(499)367-59-28</strong>
+              <span class="glyphicon glyphicon-phone"></span><strong>+7 (499) 165-9854</strong>
 </p>
 
       </div>
