--- a/izm_bani/www/index.html
+++ b/izm_bani/www/index.html
@@ -172,7 +172,7 @@
     <div class="row video__block_text2 content_position clearfix">
     <div class="col-xs-12 ">
 <p>Измайловские бани с 1953 года являются одним из излюбленных мест отдыха измайловцев.
-Сегодня это современный круглосуточно работающий оздоровительный комплекс, расположенный в прекрасном классическом здании с колоннами, барельефами и мозаичными панно
+Сегодня это современный оздоровительный комплекс, расположенный в прекрасном классическом здании с колоннами, барельефами и мозаичными панно
 со сценами из московской истории. Мы свято чтим русские банные традиции, давая посетителям возможность оценить наш целебный "легкий пар", наполненный ароматами
 русского леса, хвои, меда и здоровьем. К услугам клиентов бары с широким выбором 
 прохладительных напитков, травяных чаев, соков. Комплекс предлагает своим гостям также
