--- a/tc24krs.ru/index.html
+++ b/tc24krs.ru/index.html
@@ -30,14 +30,15 @@
     <div class="topframe" id="top">
       
       <div class="topframe__gap">
+      <h1>ТехЦентр "КРС"</h1>
       </div>
       <div class="topframe__menu">
-        <nav class="navbar navbar-default" data-spy="affix" data-offset-top="100">
+        <nav class="navbar navbar-default" data-spy="affix" data-offset-top="150">
           <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#top">
+              <!--<a class="visible-xs navbar-brand" href="#top">
                 ТехЦентр "КРС"
-              </a>
+              </a>-->
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -58,7 +59,7 @@
           </div>
         </nav>
       </div>
-      <div class="topframe__slider">
+      <!--<div class="topframe__slider">
         <div class="topframe__slider_image">
         <!--<img src="./content/front_photo.jpg" width="100%" height="550px" alt="welcome">-->
         </div>
@@ -123,8 +124,8 @@
           </div>
         </div>
         <div class="slider__controlbar">     
-        </div>-->
-      </div>
+        </div>
+      </div>-->
     </div>
     <div class="mainframe">
         <div class="mainframe__himchistka container-fluid" id="himchistka">
