--- a/newkrs/www/him.html
+++ b/newkrs/www/him.html
@@ -72,7 +72,7 @@ e-mail: 7023002@mail.ru </p></div>
 	<div class="main_menu">
 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
   <div class="btn-group" role="group">
-    <a href="/index.html"><button style="
+    <a href="./index.html"><button style="
     background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
     background-repeat: repeat-x;" type="button" class="btn btn-default">ТОНИРОВКА</button></a>
   </div>
