--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -111,7 +111,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-end">
 	<div class="col-12 col-sm-4 col-lg-3 order-1">
 		
-			<h3>«Холодный фронт»<br>(«Труба, край и вилы»)</h3>
+			<a href="http://tricolortvmag.ru/article/canals/truba-kray-i-vily/?sphrase_id=41046"><h3>«Холодный фронт»<br>(«Труба, край и вилы»)</h3></a>
 			<p>Психологический триллер, снятый на поразительной красоты просторах с по-настоящему красивыми людьми в главных ролях, — фильм-обманка. Притворяясь, что вот-вот что-то произойдёт, он то и дело обрубает постоянно возникающее напряжение то шуткой, то пробежкой. </p>
 		
 	</div>
@@ -123,7 +123,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-start">
 	<div class="col-12 col-sm-4 col-lg-3 order-2">
 		
-			<h3>«Не в моем вкусе»<br>(«Роман в провинции»)</h3>
+		<a href="http://tricolortvmag.ru/article/movies/roman-v-provintsii/?sphrase_id=41044"><h3>«Не в моем вкусе»<br>(«Роман в провинции»)</h3></a>
 			<p>Фильм «Не в моем вкусе» начинается как ремейк недавнего «Иррационального человека» Вуди Аллена: скучающий сноб-философ приезжает в захолустную провинцию и находит двух женщин, которые не прочь послушать о его жизненных воззрениях за пределами лектория. Но как быстро «Иррациональный человек» делает крен в сторону трагикомедии об экзистенциальном существовании, так еще резвей «Не в моем вкусе» сворачивает в мелодраму.
 			</p>
 		
@@ -136,7 +136,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-end">
 	<div class="col-12 col-sm-4 col-lg-3 order-1">
 		
-			<h3>«Голодные игры: Сойка-пересмешница. Часть II»<br>(«Финальный полёт Сойки-пересмешницы»)</h3>
+			<a href="http://kinopokaz.tv/newsItem/show/315"><h3>«Голодные игры: Сойка-пересмешница. Часть II»<br>(«Финальный полёт Сойки-пересмешницы»)</h3></a>
 			<p>То, что в этой «Сойке» раз за разом погибают прекрасные герои (в какой-то момент даже кажется, что не выживет вообще никто), и то, что в момент финальной битвы Китнисс облачена в мантию, неуемно отсылает к другой популярной подростковой франшизе. Но если поттериана только в литературном виде взрослела со своим читателем, а экранизациям этот личностный рост передать не удалось, то фильмовое воплощение романов Коллинз взрослеет вместе со своим зрителем. В финальной части даже кажется, что повзрослело уже совсем. </p>
 		
 	</div>
@@ -148,7 +148,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-start">
 	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
 		
-			<h3>Июньский дайджест премьер журнала Cineticle</h3>
+			<a href="http://cineticle.com/reviews-/1336-digest-2016-june.html"><h3>Июньский дайджест премьер журнала Cineticle</h3></a>
 			<p>Про «Асфальт»:<br><br>
 Юный сосед Юппер сочиняет себе имя и шутя говорит о погибших родителях, неудачник в коляске фантазирует, что он фотограф из National Geographic, объездивший две трети мира и, чтобы придать своей истории правдоподобности, делает снимки с экрана телевизора на старый полароид.<br>
 <…> <br>
@@ -175,7 +175,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-end">
 	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">
 		
-			<h3>Контракт рисовальщика: куда пойти художнику — варианты программ и специальностей</h3>
+			<a href="https://www.iqconsultancy.ru/articles/kontrakt-risovalshchika-kuda-poyti-khudozhniku-varianty-programm-i-spetsialnostey/"><h3>Контракт рисовальщика: куда пойти художнику — варианты программ и специальностей</h3></a>
 			<p>Вариант четвертый: придумывать модную одежду
  <br>
 У вас безупречный вкус и вы точно знаете, какой пиджак будет идеально отражать внутренний мир того парня? Вам не дают покоя лавры Ива Сен-Лорана, Готье и Шанель?
@@ -191,7 +191,7 @@ body {background: url("example1.jpg") no-repeat left top;
 <div class="contentblock row justify-content-start">
 	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
 		
-			<h3>Группа Russell: что отличает элитные вузы Британии</h3>
+		<a href="https://www.iqconsultancy.ru/articles/gruppa-russell"><h3>Группа Russell: что отличает элитные вузы Британии</h3></a>
 			<p>Не только британские, но и крупные международные компании признают ценность выпускников вузов Russell. Они заранее нацеливают на них своих хедхантеров и предлагают выпускникам отличные условия. Как заявляет генеральный директор группы Russell Венди Пиатт, зарплата выходцев из их университетов на 10% процентов выше, чем у других. Вузы группы Russell активно участвуют в карьерной судьбе своих студентов, не жалея на это средств: проводят индивидуальные консультации, стажировки, карьерные дни и ярмарки.
 			</p>
 		
