--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -44,7 +44,8 @@ h1 {font-family:intro-bc;font-weight:bold;}
 
 h2 {font-family:intro-ta;font-weight:bold;}
 
-h3 {font-family:intro-ta;font-weight:bold; color:#0f2199;}
+h3 {font-family:intro-ta;font-weight:bold;}
+	h3:hover { color:#0f2199;}
 
 h5 {font-family:intro-la; text-decoration:underline;}
 
