--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -44,8 +44,9 @@ h1 {font-family:intro-bc;font-weight:bold;}
 
 h2 {font-family:intro-ta;font-weight:bold;}
 
-h3 {font-family:intro-ta;font-weight:bold; color:black; font-style:italic; text-decoration:none;}
-	h3:hover { color:#0f2199; text-decoration:none;}
+	h3 {font-family:intro-ta;font-weight:bold;font-style:italic; }
+	a {color:black; text-decoration:none;}
+	a:hover { color:#0f2199; text-decoration:none;}
 
 h5 {font-family:intro-la; text-decoration:underline;}
 
