--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -44,7 +44,7 @@ h1 {font-family:intro-bc;font-weight:bold;}
 
 h2 {font-family:intro-ta;font-weight:bold;}
 
-	h3 {font-family:intro-ta;font-weight:bold;/*font-style:italic;*/ }
+	h3 {font-family:intro-ta;font-weight:bold;}
 	a {color:black; text-decoration:none;}
 	a:hover { color:#0f2199; text-decoration:none;}
 
@@ -56,7 +56,7 @@ body {background: url("example1.jpg") no-repeat left top;
 
 	body {font-family:intro-lr;
 	font-weight:bold;
-	/*text-transform:uppercase;*/}
+	}
 
 .nav {background-color: #f2f2f2; text-decoration:none; margin-top:15px;}
 
