--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -44,7 +44,7 @@ h1 {font-family:intro-bc;font-weight:bold;}
 
 h2 {font-family:intro-ta;font-weight:bold;}
 
-	h3 {font-family:intro-ta;font-weight:bold;}
+	h3 {font-family:intro-ta;font-weight:bold;text-transform:uppercase;}
 	a {color:black; text-decoration:none;}
 	a:hover { color:#0f2199; text-decoration:none;}
 
