--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -94,7 +94,7 @@ body {background: url("example1.jpg") no-repeat left top;
 			<a class="nav-link" href="#">ТЕКСТЫ</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link disabled" href="#">ЛЕКЦИИ</a>
+			<a class="nav-link" href="#">ЛЕКЦИИ</a>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="#">КОНТАКТЫ</a>
