--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -48,7 +48,7 @@ h2 {font-family:intro-ta;font-weight:bold;}
 	a {color:black; text-decoration:none;}
 	a:hover { color:#0f2199; text-decoration:none;}
 
-h5 {font-family:intro-la; text-decoration:underline;}
+h5 {font-family:intro-la; text-decoration:underline;text-transform:uppercase;}
 
 /*
 body {background: url("example1.jpg") no-repeat left top; 
