--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -72,7 +72,7 @@ body {background: url("example1.jpg") no-repeat left top;
 
 .header_title {text-align: center;}
 
-.header_title_h {padding-top:25px;}
+.header_title_h {padding-top:25px;font-family:intro-la;}
 
 
 
