--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -73,7 +73,7 @@ body {background: url("example1.jpg") no-repeat left top;
 .order-2 {    padding-right: 0; padding-left: 15px;}
 
 
-.contentblock {padding-top:15px;padding-bottom:15px;}
+.contentblock {padding-top:15px;padding-bottom:15px;     align-items: center!important;}
 
 .contentblock p {padding-top:10px;}
 
@@ -252,7 +252,7 @@ document.getElementById("defaultOpen").click();
 </div>
 
 
-<div class="contentblock row justify-content-end">
+<div class="contentblock row justify-content-end align-items-center">
 	<div class="col-12 col-sm-4 col-lg-3 order-1">
 		
 			<a href="http://tricolortvmag.ru/article/canals/truba-kray-i-vily/?sphrase_id=41046"><h3>«Холодный фронт»<br>(«Труба, край и вилы»)</h3></a>
